# cc_dev_RAG

./: .env.example  .gitignore  DEPLOY_CHANGES.md  PRD.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py  chat.py  config.py  kbs.py
backend/app/core/: __init__.py  config.py
backend/app/graph/: __init__.py  agent.py  state.py
backend/app/schemas/: __init__.py  chat.py  config.py  knowledge_base.py
backend/app/services/llm/: __init__.py  base.py  embeddings.py  rerankers.py
backend/app/services/rag/: __init__.py  document.py  retrieval.py
docker/: docker-compose.yml
docker/milvus/: milvus.yaml
frontend/: .gitignore  index.html  package.json  tailwind.config.js
frontend/src/: App.vue
frontend/src/api/: __init__.ts  client.ts
frontend/src/components/: __init__.ts
frontend/src/components/chat/: ChatHeader.vue  ChatInput.vue  ChatMessage.vue  ConversationSidebar.vue  KBSelectorModal.vue  ReferenceModal.vue
frontend/src/components/common/: ConfirmModal.vue
frontend/src/components/kb/: CreateKBModal.vue  DocumentList.vue  DocumentUploader.vue
frontend/src/pages/: ChatPage.vue  KnowledgeBasePage.vue  SettingsPage.vue
frontend/src/router/: index.ts
frontend/src/stores/: __init__.ts  conversations.ts  knowledgeBase.ts  settings.ts
frontend/src/styles/: main.css
frontend/src/types/: index.ts
